--- a/html/binh/Java/index.html
+++ b/html/binh/Java/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to the Home Page</h1>
+    <h1>Welcome to the Home Page 2</h1>
     <a href="/about.html">Go to About</a>
 </body>
 </html>
